<package>
  <name>termcolor</name>
  <version>1.0.0</version>
  <description>
   C++ library for printing colours in ansii consoles.
  </description>
  <url type="repository">https://github.com/stonier/termcolor</url>
  <url type="bugtracker">https://github.com/stonier/termcolor/issues</url>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>Yujin Robot</license>  
  <author>Igor Kalnitsky</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
